# realtime-whisper

./: .gitignore  Dockerfile  Pipfile  README.md  cspell.config.yaml  docker-compose.yml  requirements.txt  setup.cfg
.github/workflows/: docker-image.yml  python-unittest.yml  python.yml
scripts/: download.py  pyaudio_client.py
src/realtime_whisper/: __main__.py  app_io.py  argument_parser.py  async_itertools.py  cli.py  config.py  gradio_app.py  loader.py  realtime_whisper.py  websocket.py
src/realtime_whisper/config/: __init__.py  argument_parser.py  backend_config.py  gradio_config.py  logging_config.py  model_config.py  quantization_config.py  transcription_config.py  utils.py  vad_config.py  websocket_config.py
src/realtime_whisper/speech_transcription_interfaces/: __init__.py  gradio_interface.py  websocket_server_interface.py
src/realtime_whisper/utils/: model_loader.py
tests/realtime_whisper/: test.pcm  test_model_loader.py  test_realtime_whisper.py
