

[metadata]
name = realtime_whisper
version = 0.5.0
description = Automatic speech recognition (ASR) by Whisper from OpenAI in real-time audio stream through WebSocket.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = esnya
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
install_requires =
    accelerate
    numpy
    optimum
    pydantic
    pydantic-settings
    safetensors
    torch
    torchaudio
    transformers
    websockets

[options.extras_require]
dev =
    bandit
    datasets
    librosa
    numba
    numpy
    pyaudio

[options.packages.find]
where = src
